Real Analysis: Update notes

--- a/Real-Analysis-MIT-18100A/Notes.tex
+++ b/Real-Analysis-MIT-18100A/Notes.tex
@@ -188,6 +188,16 @@ or, more generally,
 % ******************************
 
 % ------------------------------
+\subsubsection{well ordering property of $\mathbb{N}$}
+% ------------------------------
+
+Every nonempty subset of $\mathbb{N}$ has a least (smallest) element.
+
+The textbook says ``We take this property as an \textbf{axiom}; we simply
+assume it is true.'' So that means we can't (or may not want to) prove this
+property.
+
+% ------------------------------
 \subsubsection{Theorem 0.3.6: Principle of induction}
 % ------------------------------
 
