CS103: Fix a mistake in the notes

--- a/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
+++ b/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
@@ -350,7 +350,7 @@ Here is the truth table for $p \leftrightarrow q$:
   \cline{1-3}
   p & q & $p \leftrightarrow q$ &  &  \\ [1ex] \cline{1-3}
   F & F & T                     &  &  \\ [0.5ex] \cline{1-3}
-  F & T & T                     &  &  \\ [0.5ex] \cline{1-3}
+  F & T & F                     &  &  \\ [0.5ex] \cline{1-3}
   T & F & F                     &  &  \\ [0.5ex] \cline{1-3}
   T & T & T                     &  &  \\ [0.5ex] \cline{1-3}
   \end{tabular}
