LaTex cheatsheet: Add an example of referring to a table

--- a/LaTex-Cheatsheet/LaTex-Cheatsheet.tex
+++ b/LaTex-Cheatsheet/LaTex-Cheatsheet.tex
@@ -80,6 +80,8 @@ Table compares lists and sets:
 \label{table:lists_sets_comp}
 \end{table}
 
+This is a reference to table \ref{table:lists_sets_comp}
+
 \begin{table}[H]
   \centering
   \begin{tabular}{|c|c|c|ll}
