CS103: Add notes about the lecture "Indirect Proofs"

--- a/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
+++ b/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
@@ -230,6 +230,18 @@ process can be summarized as follows:
 
 \chapter{Indirect Proofs}
 
+% =============================================================================
+\section{Implication}
+% =============================================================================
+
+An implication can be denoted as $p \rightarrow q$:
+\begin{enumerate}
+  \item In mathematics, implication is directional.
+  \item In mathematics, implications only say something about the consequent
+    when the antecedent is true.
+  \item In mathematics, implication says nothing about causality.
+\end{enumerate}
+
 (TODO)
 
 % =============================================================================
