--- a/LaTeX-Cheatsheet/TikZ-Demo.tex
+++ b/LaTeX-Cheatsheet/TikZ-Demo.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt, letterpaper, oneside]{article}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{csquotes}
 \usepackage{float}
 \usepackage{hyperref}
@@ -17,18 +18,20 @@
 
 \begin{document}
 
-% =============================================================================
-\section{Draw circles}
-% =============================================================================
-
 Useful links
 \begin{enumerate}
   \item \href{https://latexdraw.com/}{TikZBlog}
     \begin{enumerate}
       \item \href{https://latexdraw.com/tikz-shapes-circle/}{TikZ shapes: Circle}
       \item \href{https://latexdraw.com/how-to-draw-venn-diagrams-in-latex/}{How to draw Venn Diagrams in LaTeX}
+      \item \href{https://latexdraw.com/how-to-annotate-an-image-in-latex/}{How to Annotate an Image in LaTeX}
+      \item \href{https://latexdraw.com/exploring-tikz-arrows/}{TikZ arrows}
     \end{enumerate}
 \end{enumerate}
+
+% =============================================================================
+\section{Draw circles}
+% =============================================================================
 
 % -----------------------------------------------------------------------------
 \subsection{Using ``draw''}
@@ -290,6 +293,102 @@ fill=blue!50,label={45:$B$}] (B) at (1.8,0) {};
 % Set intersection label
 \node at (0.9,0) {$A \cap B$};
 
+\end{tikzpicture}
+
+% =============================================================================
+\section{Arrows}
+% =============================================================================
+
+\begin{tikzpicture}
+  \draw [-stealth](0,0) -- (1,0);
+  \draw [stealth-](2,0) -- (3,0);
+  \draw [stealth-stealth](4,0) -- (5,0);
+
+  \draw [-stealth reversed](0,1) -- (1,1);
+  \draw [stealth reversed-](2,1) -- (3,1);
+  \draw [stealth reversed-stealth reversed](4,1) -- (5,1);
+
+  \draw [-to](0,2) -- (1,2);
+  \draw [to-](2,2) -- (3,2);
+  \draw [to-to](4,2)--(5,2);
+
+  \draw [-to reversed](0,3) -- (1,3);
+  \draw [to reversed-](2,3) -- (3,3);
+  \draw [to reversed-to reversed](4,3)--(5,3);
+
+  \draw [-latex](0,4) -- (1,4);
+  \draw [latex-](2,4) -- (3,4);
+  \draw [latex-latex](4,4) -- (5,4);
+\end{tikzpicture}
+
+\begin{tikzpicture}
+  \draw [-latex reversed](0,0) -- (1,0);
+  \draw [latex reversed-](2,0) -- (3,0);
+  \draw [latex reversed-latex reversed](4,0) -- (5,0);
+
+  \draw [-|](0,1) -- (1,1);
+  \draw [|-](2,1) -- (3,1);
+  \draw [|-|](4,1) -- (5,1);
+\end{tikzpicture}
+
+% =============================================================================
+\section{Annotation}
+% =============================================================================
+
+\begin{tikzpicture}
+  % Set Q, the enclosing set.
+  \node [ellipse,
+    draw=blue!60,
+    fill=cyan!40,
+    line width=1mm,
+    minimum width=8cm,
+    minimum height=5cm,
+    label={-90:$Q(x)=True$}] (Q) at (0,0) {};
+
+  % Set P, the enclosed set.
+  \node [ellipse,
+    draw=orange!80,
+    fill=yellow!20,
+    line width=1mm,
+    minimum width=3cm,
+    minimum height=2cm,
+    label={$P(x)=True$}] (P) at (-1,0) {};
+
+  % Element a where P(a) = True and Q(a) = True
+  \node [
+    regular polygon,
+    draw,
+    regular polygon sides=4,
+    minimum size=0.5cm,
+    fill=yellow] (a) at (-0.5,0) {a};
+  \node[
+    draw=black,
+    left, black, fill=white] at (8,2) {P(a)=T and Q(a)=T};
+  \draw [-stealth] (3.8,2) -- (0,0);
+
+  % Element b where P(b) = True but Q(b) = False
+  \node [
+    regular polygon,
+    draw,
+    regular polygon sides=4,
+    minimum size=0.5cm,
+    fill=yellow] (b) at (2,0) {b};
+  \node[
+    draw=black,
+    left, black, fill=white] at (9,0) {P(b)=T but Q(b)=F};
+  \draw [-stealth] (4.9,0) -- (2.4,0);
+
+  % Element c where P(c) = True and Q(c) = True
+  \node [
+    regular polygon,
+    draw,
+    regular polygon sides=4,
+    minimum size=0.5cm,
+    fill=yellow] (c) at (4,-2) {c};
+  \node[
+    draw=black,
+    left, black, fill=white] at (10,-2) {P(c)=F and Q(c)=F};
+  \draw [-stealth] (5.9,-2) -- (4.4,-2);
 \end{tikzpicture}
 
 \end{document}
