CS103: Update notes: Add the remaining chapters I plan to study

--- a/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
+++ b/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
@@ -567,6 +567,116 @@ Note that the implication $T \rightarrow F: F$ is \textbf{neither of them}.
   \item $\lnot (p \lor q) \equiv \lnot p \land \lnot q$
 \end{itemize}
 
+% =============================================================================
+%
+% First-Order Logic
+%
+% =============================================================================
+
+\chapter{First-Order Logic}
+
+(TODO)
+
+% =============================================================================
+%
+% Functions
+%
+% =============================================================================
+
+\chapter{Functions}
+
+(TODO)
+
+% =============================================================================
+%
+% Graphs
+%
+% =============================================================================
+
+\chapter{Graphs}
+
+(TODO)
+
+% =============================================================================
+%
+% Mathematical Induction
+%
+% =============================================================================
+
+\chapter{Mathematical Induction}
+
+(TODO)
+
+% =============================================================================
+%
+% Finite Automata
+%
+% =============================================================================
+
+\chapter{Finite Automata}
+
+(TODO)
+
+% =============================================================================
+%
+% Regular Expression
+%
+% =============================================================================
+
+\chapter{Regular Expression}
+
+(TODO)
+
+% =============================================================================
+%
+% Nonregular Languages
+%
+% =============================================================================
+
+\chapter{Nonregular Languages}
+
+(TODO)
+
+% =============================================================================
+%
+% Context-Free Languages
+%
+% =============================================================================
+
+\chapter{Context-Free Languages}
+
+(TODO)
+
+% =============================================================================
+%
+% Turing Machines
+%
+% =============================================================================
+
+\chapter{Turing Machines}
+
+(TODO)
+
+% =============================================================================
+%
+% Unsolvable Problems
+%
+% =============================================================================
+
+\chapter{Unsolvable Problems}
+
+(TODO)
+
+% =============================================================================
+%
+% Complexity Theory and P vs NP
+%
+% =============================================================================
+
+\chapter{Complexity Theory and P vs NP}
+
+(TODO)
+
 \chapter*{References}
 \addcontentsline{toc}{chapter}{References}
 
